UI: merge new styles and specs from IXT
Squashed commit of the following:

commit c99a5444ca5bbcb6a3149bc726d0c8ad4e847408
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Aug 8 12:56:24 2014 +0200

    Fix relationships pointing bottom arrow when scrollbars always visible.

commit ed22b3ec16dc1309ef620ddb4cd312952ca3bcd2
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 15 15:04:35 2014 +0200

    Update stats module spec throughout.

commit 6fe348899894a0d3f871da4af8e2d6832dd36306
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 15 12:44:29 2014 +0200

    Cleanup.

commit 79481f49185c8341019252f825034828e2caa65f
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 15 11:51:21 2014 +0200

    Update thumb up/down items background.

commit c0e523c3dbdca40273b2dfab79be467639655344
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 15 11:22:14 2014 +0200

    Unify counters.

commit d83b2ca16c978889ecf2b727c4cf7031465f7912
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 15 09:59:15 2014 +0200

    Bring privacy icons back in horizontal grid resources.

commit 93f20d5a87d4d82002c0898cd4b377d068533d80
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 15 08:52:58 2014 +0200

    Document stats module.

commit f3eb42b284c770c359705de1132c00a73cba67e1
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Jul 10 13:51:45 2014 +0200

    Update set icon and icon font to reflect new set thumb style.

commit d9728c82c26fb5c6ca8b1b491c9dbbf9e0b113f5
Author: Piotr F <piotr@piotrf.pl>
Date:   Wed Jul 9 11:51:22 2014 +0200

    Cleanup Upc Spec 1.

commit 153ac7f1c1aef09f5fa805b1743ff2122306d4a0
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 8 18:15:37 2014 +0200

    Fix horizontal tile grid spec.

commit 7b5d0c4f0761954b045ee09cdb500c7f10eca6fe
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 8 16:50:00 2014 +0200

    Cleanup.

commit e76c744996a0dd25f82ef2aea912b03a77b68e9e
Author: Piotr F <piotr@piotrf.pl>
Date:   Tue Jul 8 16:49:54 2014 +0200

    Move Relationships to Spec 3.

com

--- a/app/assets/stylesheets/_colors-contrasted.sass
+++ b/app/assets/stylesheets/_colors-contrasted.sass
@@ -4,7 +4,7 @@ $projection         : true
  *-----------------------------------------
 
 // Grey Shades
-$mono-darkest       : #000
+$black              : #000
 $mono-dark          : #000
 $mono-strong        : #000
 $mono-heavy         : #3F3F3F
@@ -12,7 +12,7 @@ $mono-mid           : #3F3F3F
 $mono-light         : #666666
 $mono-weak          : #999999
 $mono-bright        : #ccc
-$mono-brightest     : #fff
+$white              : #fff
 
 // Rainbow Shades
 $green              : #4B601F
@@ -52,10 +52,10 @@ $main-color-light   : #171717
  *-----------------------------------------
 
 $opacity-strong     : 1
-$opacity-medium     : 1
-$opacity-subtle     : 0.25
+$opacity-heavy      : 1
+$opacity-medium     : 0.25
 $opacity-light      : 0.15
-$opacity-subtle     : 0.05
+$opacity-weak       : 0.05
 
 /* Body
  *-----------------------------------------
