--- a/app/assets/stylesheets/_colors.sass
+++ b/app/assets/stylesheets/_colors.sass
@@ -4,7 +4,7 @@ $projection         : false
  *-----------------------------------------
 
 // Grey Shades
-$mono-darkest       : black
+$black              : black
 $mono-dark          : #4c4c4c
 $mono-strong        : #666666
 $mono-heavy         : grey
@@ -12,7 +12,7 @@ $mono-mid           : #9a9a9a
 $mono-light         : #cccccc
 $mono-weak          : #e7e7e7
 $mono-bright        : #f3f3f3
-$mono-brightest     : white
+$white              : white
 
 // Rainbow Shades
 $green              : #7a9d29
@@ -56,10 +56,10 @@ $main-color-light   : lighten($main-color, 10%)
  *-----------------------------------------
 
 $opacity-strong     : 0.85
-$opacity-medium     : 0.5
-$opacity-subtle     : 0.25
+$opacity-heavy      : 0.5
+$opacity-medium     : 0.25
 $opacity-light      : 0.15
-$opacity-subtle     : 0.05
+$opacity-weak       : 0.05
 
 /* Body
  *-----------------------------------------
