--- a/app/assets/stylesheets/_config.sass
+++ b/app/assets/stylesheets/_config.sass
@@ -32,25 +32,27 @@ $line-height-s        : 1.4
 $line-height-xs       : 1.25
 
 $default-font-family  : "Open Sans", sans-serif
+$default-transition-duration : 0.5s
 
 /* Shadows and flairs
  *-----------------------------------------
 $darken-strong        : rgba(0, 0, 0, $opacity-strong)
-$darken-more          : rgba(0, 0, 0, $opacity-medium)
-$darken               : rgba(0, 0, 0, $opacity-subtle)
+$darken-more          : rgba(0, 0, 0, $opacity-heavy)
+$darken               : rgba(0, 0, 0, $opacity-medium)
 $darken-less          : rgba(0, 0, 0, $opacity-light)
-$darken-subtle        : rgba(0, 0, 0, $opacity-subtle)
+$darken-subtle        : rgba(0, 0, 0, $opacity-weak)
 
 $lighten-strong       : rgba(255, 255, 255, $opacity-strong)
-$lighten-more         : rgba(255, 255, 255, $opacity-medium)
-$lighten              : rgba(255, 255, 255, $opacity-subtle)
+$lighten-more         : rgba(255, 255, 255, $opacity-heavy)
+$lighten              : rgba(255, 255, 255, $opacity-medium)
 $lighten-less         : rgba(255, 255, 255, $opacity-light)
-$lighten-subtle       : rgba(255, 255, 255, $opacity-subtle)
+$lighten-subtle       : rgba(255, 255, 255, $opacity-weak)
 
 /* Border radii
  *-----------------------------------------
-$border-radius-s      : 3px
-$border-radius-m      : 5px
+$border-radius-s        : 3px
+$border-radius-m        : 5px
+$border-radius-absolute : 1000px
 
 /* Spaces
  *-----------------------------------------
