--- a/app/assets/stylesheets/combos/_ui-home-claim.sass
+++ b/app/assets/stylesheets/combos/_ui-home-claim.sass
@@ -29,7 +29,7 @@
 .pitch-login-tab
   +border-bottom-radius($border-radius-m)
   border: 1px solid $mono-light
-  background: $mono-brightest
+  background: $white
   min-height: 180px
   padding: $space-s $space-m 0
 
