--- a/app/assets/stylesheets/combos/_ui-search-form.sass
+++ b/app/assets/stylesheets/combos/_ui-search-form.sass
@@ -6,7 +6,7 @@
 .ui-search-form
   +border-radius($border-radius-m)
   +dimension(380px, auto)
-  background: $mono-brightest
+  background: $white
   border: 1px solid $mono-light
   margin: 150px auto
   padding: $space-m $space-l
