--- a/app/assets/stylesheets/combos/_ui-side-filter.sass
+++ b/app/assets/stylesheets/combos/_ui-side-filter.sass
@@ -12,7 +12,7 @@
  */
 
 .ui-side-filter
-  +box-shadow(1px 0 0 $mono-brightest)
+  +box-shadow(1px 0 0 $white)
   +micro-clearfix
   border-right: 1px solid $mono-light
   margin-right: $space-m
@@ -110,7 +110,7 @@
   +box-shadow(0 1px 0 $lighten-more)
   border-bottom: 1px solid $mono-light
   &:last-child
-    +box-shadow(0 0 0 $mono-brightest)
+    +box-shadow(0 0 0 $white)
     border-bottom: none
 
 .ui-accordion-body
