--- a/app/assets/stylesheets/components/_multi-select.sass
+++ b/app/assets/stylesheets/components/_multi-select.sass
@@ -6,7 +6,7 @@
 .multi-select
   +border-radius($border-radius-m)
   +micro-clearfix
-  background: $mono-brightest
+  background: $white
   border: 1px solid $mono-light
   padding: $space-s
 
