--- a/app/assets/stylesheets/components/_ui-alerts.sass
+++ b/app/assets/stylesheets/components/_ui-alerts.sass
@@ -29,7 +29,7 @@
 .ui-alert.error,
 .ui-alert.confirmation
   +single-text-shadow(false, 1px, false, false, $darken)
-  color: $mono-brightest
+  color: $white
 
 .ui-alert.success
   background: $green
