--- a/app/assets/stylesheets/components/_ui-modals.sass
+++ b/app/assets/stylesheets/components/_ui-modals.sass
@@ -14,7 +14,7 @@
   +border-radius($border-radius-m)
   +box-shadow(0 1px 3px $darken-more)
   +dimension(550px, auto)
-  background: $mono-brightest
+  background: $white
   border: 1px solid $mono-dark
   z-index: 2001
   // clipboard is 2000
