--- a/app/assets/stylesheets/components/_ui-resources-head.sass
+++ b/app/assets/stylesheets/components/_ui-resources-head.sass
@@ -6,8 +6,8 @@
 // Thumbnail section headers
 
 .ui-resources-header
-  +max-dimension(800px, auto)
   margin: 0 0 $space-m 0
+  max-width: 800px
 
 .ui-resources-header .button-group
   display: inline-block
