--- a/app/assets/stylesheets/components/_ui-slider.sass
+++ b/app/assets/stylesheets/components/_ui-slider.sass
@@ -30,8 +30,8 @@
   +border-radius($border-radius-s)
   +box-shadow(inset 0 1px 0 $lighten-less, 0 1px 2px $darken)
   +position-bottom-left($space-m, 0)
-  border: 1px solid $mono-darkest
-  color: $mono-brightest
+  border: 1px solid $black
+  color: $white
   display: block
   font-size: $font-xs
   line-height: 1
@@ -59,7 +59,7 @@
 
 .ui-slider-info:before
   border-color: rgba(0, 0, 0, 0)
-  border-top-color: $mono-darkest
+  border-top-color: $black
   border-width: 6px
   left: 50%
   margin-left: -6px
