--- a/app/assets/stylesheets/components/_ui-tabs.sass
+++ b/app/assets/stylesheets/components/_ui-tabs.sass
@@ -32,7 +32,7 @@
 .ui-tabs-item.active a,
 .ui-tabs-item a.active
   +box-shadow(none)
-  background: $mono-brightest
+  background: $white
 
 // Colour variations
 .ui-tabs.primary .ui-tabs-item a
