--- a/app/assets/stylesheets/components/_ui-tag-cloud.sass
+++ b/app/assets/stylesheets/components/_ui-tag-cloud.sass
@@ -18,7 +18,7 @@
 
 .ui-tag-button
   background-color: $mono-bright
-  +background-image(linear-gradient($mono-brightest, $mono-bright))
+  +background-image(linear-gradient($white, $mono-bright))
   +border-radius(50px)
   +box-shadow($lighten 0 1px 0 inset)
   +single-text-shadow(false, 1px, false, false, $lighten-more)
@@ -101,7 +101,7 @@
     min-height: 37px
   .ui-tag-icon
     top: 1px
-  .ui-tag-button 
+  .ui-tag-button
     padding: 0 15px
     .ui-tag-icon
       left: -3px
