--- a/app/assets/stylesheets/general/_icons.sass
+++ b/app/assets/stylesheets/general/_icons.sass
@@ -14,9 +14,9 @@
 // match our icons as well as generic font-awesome
 [class*="icon-"], .fa[class*="fa-"]
   font-size: 16px
-  
+
   &.bright
-    color: $mono-brightest
+    color: $white
 
   &.mid
     color: $mono-mid
