--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -404,6 +404,7 @@ body.sg-full
     font-weight: bold
     color: #222
     padding: 3px 15px
+    z-index: 10000
 
 // ----------------------------------------------------------------------------
 
