--- a/app/views/styleguide/06 Icons/_icons.html
+++ b/app/views/styleguide/06 Icons/_icons.html
@@ -196,6 +196,7 @@
           <i class="icon-vis-graph"></i>
           <i class="icon-vis-miniature"></i>
           <i class="icon-vis-grid"></i>
+          <i class="icon-vis-pins"></i>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
@@ -205,6 +206,7 @@
           <i class="icon-vis-graph bright"></i>
           <i class="icon-vis-miniature bright"></i>
           <i class="icon-vis-grid bright"></i>
+          <i class="icon-vis-pins bright"></i>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
@@ -214,6 +216,7 @@
           <i class="icon-vis-graph mid"></i>
           <i class="icon-vis-miniature mid"></i>
           <i class="icon-vis-grid mid"></i>
+          <i class="icon-vis-pins mid"></i>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
@@ -223,6 +226,7 @@
           <i class="icon-vis-graph branded"></i>
           <i class="icon-vis-miniature branded"></i>
           <i class="icon-vis-grid branded"></i>
+          <i class="icon-vis-pins branded"></i>
         </div>
       </div>
     </div>
