--- a/app/views/styleguide/07 Components/_components.html
+++ b/app/views/styleguide/07 Components/_components.html
@@ -1191,7 +1191,7 @@
     <div class="sg-canvases">
       <div class="align-left bg-light sg-canvas">
         <div style="">
-            <img alt="ZHdK" class="ui-thumbnail micro" src="/assets/styleguide/media-entry-1.png">
+            <img alt="ZHdK" class="ui-thumbnail micro" src="/assets/styleguide/media-entry-1.jpg">
             <img alt="wav" class="ui-thumbnail micro" src="/assets/thumbnails/audio_small.wav.png">
         </div>
       </div>
@@ -1463,7 +1463,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="sg-example" id="7.21">
     <h3>
       <a href="#7.21">7.21</a>
@@ -1520,7 +1520,6 @@
                     </h3>
                     <p class="ui-thumbnail-meta-subtitle">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor.</p>
                   </div>
-                  <!-- .separator.mbm -->
                 </div>
               </div>
               <div class="col1of3">
@@ -1531,7 +1530,6 @@
                     </h3>
                     <p class="ui-thumbnail-meta-subtitle">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor.</p>
                   </div>
-                  <!-- .separator.mbm -->
                 </div>
               </div>
               <div class="col1of3">
@@ -1542,7 +1540,6 @@
                     </h3>
                     <p class="ui-thumbnail-meta-subtitle">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor.</p>
                   </div>
-                  <!-- .separator.mbm -->
                 </div>
               </div>
             </div>
@@ -1555,7 +1552,6 @@
                     </h3>
                     <p class="ui-thumbnail-meta-subtitle">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor.</p>
                   </div>
-                  <!-- .separator.mbm -->
                 </div>
               </div>
               <div class="col1of3">
@@ -1566,7 +1562,6 @@
                     </h3>
                     <p class="ui-thumbnail-meta-subtitle">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor.</p>
                   </div>
-                  <!-- .separator.mbm -->
                 </div>
               </div>
               <div class="col1of3">
@@ -1577,12 +1572,31 @@
                     </h3>
                     <p class="ui-thumbnail-meta-subtitle">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor.</p>
                   </div>
-                  <!-- .separator.mbm -->
                 </div>
               </div>
             </div>
 
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="sg-example" id="7.23">
+    <h3>
+      <a href="#7.23">7.23</a>
+    </h3>
+
+    <div class="sg-description">
+      <h2>Counters <code>.ui-counter</code></h2>
+      <p>Counters that usually support section titles, display number of items within a media entry or catalog.</p>
+    </div>
+    <div class="sg-canvases">
+      <div class="align-left bg-light sg-canvas">
+        <div>
+
+          <span class="ui-counter">(6)</span>
+
         </div>
       </div>
     </div>
