--- a/app/assets/stylesheets/_loader.sass
+++ b/app/assets/stylesheets/_loader.sass
@@ -4,12 +4,16 @@
 // Mixins
 @import compass
 @import library/dimension
+@import library/force-scrollbars
 @import library/ixt-reset
 @import library/micro-clearfix
+@import library/opacify
 @import library/position
 @import library/replacement
+@import library/reset-last
 @import library/sticky-footer
 @import library/space
+@import library/truncate
 
 // Mixin extensions
 @import library/grid
@@ -57,6 +61,7 @@
 @import components/ui-alerts
 @import components/ui-body-title
 @import components/ui-containers
+@import components/ui-counters
 @import components/ui-drop-menus
 @import components/ui-form-group
 @import components/ui-info-box
@@ -69,6 +74,7 @@
 @import components/ui-set-list
 @import components/ui-side-navigation
 @import components/ui-slider
+@import components/ui-stats
 @import components/ui-stepline
 @import components/ui-tabs
 @import components/ui-tag-cloud
@@ -76,6 +82,7 @@
 @import components/ui-thumb-actions
 @import components/ui-thumb-catalog
 @import components/ui-thumb-micro
+@import components/ui-tiles
 @import components/ui-tooltip
 
 // To be revamped
@@ -132,6 +139,7 @@
 @import combos/ui-resources-grid
 @import combos/ui-resources-list
 @import combos/ui-resources-miniature
+@import combos/ui-resources-tiles
 
 /* Layout
  *-----------------------------------------
@@ -147,6 +155,7 @@
 @import views/edit_media_resource
 @import views/edit_multiple_media_entries
 @import views/home
+@import views/relationships
 
 /* Extra
  *-----------------------------------------
