--- a/app/assets/stylesheets/combos/_ui-featured-entries.sass
+++ b/app/assets/stylesheets/combos/_ui-featured-entries.sass
@@ -30,7 +30,7 @@
 .ui-featured-entry
   +box-shadow(0 1px 5px $darken-more)
   +dimension(auto, 320px)
-  background: $mono-brightest
+  background: $white
   display: inline-block
   position: relative
   margin: 0 $space-m 0 0
@@ -40,7 +40,7 @@
 .ui-featured-entry.filterset
   .ui-featured-entry-filterset-flag
     +position-top-right(0,0)
-    background: $mono-brightest
+    background: $white
     display: block
     height: 20px
     text-align: center
@@ -54,7 +54,7 @@
 .ui-featured-entry-metadata
   +position-bottom-right(0, 0)
   +position-bottom-left(0, 0)
-  background: $mono-brightest
+  background: $white
   overflow: hidden
   margin-right: 10px
   padding: $space-s
@@ -66,7 +66,7 @@
     overflow: hidden
     text-align: left
   &:after
-    +background(linear-gradient(right, $mono-brightest, rgba(255, 255, 255, 0)))
+    +background(linear-gradient(right, $white, rgba(255, 255, 255, 0)))
     +dimension(20%, 100%)
     +position-top-right(0, 0)
     display: block
@@ -86,7 +86,7 @@
     &:hover
       opacity: 1.0
     a
-      color: $mono-brightest
+      color: $white
       &:hover
         text-decoration: none
 
@@ -137,7 +137,7 @@
     .ui-featured-action-browse,
     .ui-featured-action-edit,
     .ui-featured-action-select
-      color: $mono-brightest
+      color: $white
       &:hover
         text-decoration: none
   &.small .ui-featured-entries-item:hover .ui-featured-entry-actions
