--- a/app/assets/stylesheets/combos/_ui-footer.sass
+++ b/app/assets/stylesheets/combos/_ui-footer.sass
@@ -28,7 +28,7 @@
 
 .ui-footer-logo
   font-size: 40px
-  color: $mono-brightest
+  color: $white
   position: relative
   top: 13px
   line-height: 0
