--- a/app/assets/stylesheets/combos/_ui-resources-common.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-common.sass
@@ -25,19 +25,6 @@
 .ui-resource-title-core
   margin-right: $space-x
 
-.ui-resource-title-counter
-  display: inline-block
-  color: $mono-heavy
-  border: 1px solid $mono-light
-  @include border-radius(50px)
-  font-size: $font-xs
-  font-weight: bold
-  margin-left: $space-x
-  background: $mono-weak
-  padding: 0 $space-x
-  position: relative
-  top: -1px
-
 .ui-resources-page-items
   +micro-clearfix
 
@@ -49,9 +36,8 @@
   display: none
 
 .ui-thumbnail-image-wrapper
-  +border-radius($border-radius-s)
   +box-shadow(0px 1px 3px rgba(0, 0, 0, 0.2))
-  background: $mono-brightest
+  background: $white
   border: 1px solid $mono-mid
   display: inline-block
   line-height: 0
@@ -75,9 +61,8 @@
 // Active state
 
 .ui-thumbnail-privacy
-  +border-radius($border-radius-m 0, $border-radius-s 0)
   +dimension(21px, 21px)
-  background-color: $mono-brightest
+  background-color: $white
   border-color: $mono-mid
   border-style: solid
   border-width: 0 1px 1px 0
@@ -101,4 +86,4 @@
     top: 15px
     .icon-privacy-private:before
       content: "\e616"
-      color: $mono-brightest
+      color: $white
