--- a/app/assets/stylesheets/combos/_ui-rights-management.sass
+++ b/app/assets/stylesheets/combos/_ui-rights-management.sass
@@ -177,7 +177,7 @@
     pointer-events: none
     i
       @include position-top-left(50%,50%)
-      background: $mono-darkest
+      background: $black
       display: block
       height: 2px
       margin-top: -2px
