--- a/app/assets/stylesheets/components/_ui-stepline.sass
+++ b/app/assets/stylesheets/components/_ui-stepline.sass
@@ -33,9 +33,9 @@
   font-size: $font-xs
 
 .ui-stepline-item.active
-  border-color: $mono-brightest $mono-light
+  border-color: $white $mono-light
   border-width: 0 1px 1px
-  background: $mono-brightest
+  background: $white
   .ui-stepline-item-title,
   .ui-stepline-item-description
     color: $mono-dark
