--- a/app/views/app_admin/contexts/_form.html.haml
+++ b/app/views/app_admin/contexts/_form.html.haml
@@ -39,6 +39,8 @@
         %tbody
           - @context.meta_key_definitions.each_with_index do |meta_key_definition, index|
             %tr
+              %td
+                = link_to meta_key_definition.meta_key, edit_app_admin_meta_key_path(meta_key_definition.meta_key), class: "meta-key-link"
               %td= meta_key_definition.meta_key
               %td= meta_key_definition.label
               %td= meta_key_definition.hint
