Add test for admin "switch-to" feature; fix switch-to
* fix also user-check during sign-in

Squashed commit of the following:

commit 72fa8814e21bdfc419e4cd84b4ab2b0747ff66db
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 22 12:59:42 2014 +0200

    Add test for admin "switch-to" feature

commit ffc6f77400e3e481df188f9e882ffc641d7a1758
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 22 11:06:22 2014 +0200

    Check for user first before checking signature

commit 570edfb56b14d89fa7d039438f4d9f170484c971
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 22 10:40:48 2014 +0200

    Fix switch_to to use set_madek_session

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -105,7 +105,7 @@
                 = link_to app_admin_people_path do
                   %i.icon-user
                   People 
-                = link_to app_admin_users_path do
+                = link_to app_admin_users_path, class: "users"  do
                   %i.icon-user
                   Users
           %li.dropdown
