ui: .ui-resources-table: make end of list more clear
last row:
- remove border
- pads it

--- a/app/assets/stylesheets/combos/_ui-resources-table.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-table.sass
@@ -12,6 +12,9 @@
     td, th
       vertical-align: middle
       border-bottom: 1px solid $mono-light
+    tr:last-child td
+      border: none
+      padding-bottom: 1.5em
   tbody
     color: $mono-mid
     font-size: $font-s
